@@ -1,5 +1,6 @@
 
 5.1.0 -> 5.2a0:
+    - jbj: permit multiple triggers to fire from packages.
     - jbj: don't install symclash.* to avoid picking up a dependency on python.
     - jbj: fix: check added file names against installed conflicts.
     - jbj: update nl.po (Translation Project).
